--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "playwright test --headed"
+    "test": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,16 @@
     "@types/node": "^22.1.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
-  }
+    "axios": "^1.7.3",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "jquery": "^3.7.1",
+    "path": "^0.12.7",
+    "ua-parser-js": "^1.0.38",
+    "url": "^0.11.4"
+  },
+  "type": "module"
 }
